crates/sdk/macros/tests/ui/validator_each_non_string_fail.stderr
error: `each(email)` requires `Vec<String>` or `Option<Vec<String>>`
 --> tests/ui/validator_each_non_string_fail.rs:6:13
  |
6 |     scores: Vec<u32>,
  |             ^^^^^^^^
