crates/sdk/macros/tests/ui/validator_each_non_string_fail.rs
use nebula_macros::Validator;

#[derive(Validator)]
struct InvalidEachNonString {
    #[validate(each(email))]
    scores: Vec<u32>,
}

fn main() {}